<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pantalla_inicial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/horoscopochino"
    android:orientation="vertical"
    android:textAlignment="center">

    <Button
        android:id="@+id/ingresar"
        android:layout_width="111dp"
        android:layout_height="47dp"
        android:background="@color/Negro"
        android:onClick="checar"
        android:text="@string/Ingresar"
        android:textAlignment="center"
        android:textColor="@color/Blanco"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.892" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Mensaje"
        android:textAlignment="center"
        android:textColor="@color/Blanco"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Nom"
        android:layout_width="212dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Nombre"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/Blanco"
        android:textColorHint="@color/Blanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="176dp"
        android:layout_height="26dp"
        android:layout_marginTop="20dp"
        android:text="@string/Fecha"
        android:textAlignment="center"
        android:textColor="@color/Blanco"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Nom" />

    <EditText
        android:id="@+id/dia"
        android:layout_width="77dp"
        android:layout_height="55dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="236dp"
        android:ems="10"
        android:hint="@string/dia"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        android:textColor="@color/Blanco"
        android:textColorHint="@color/Blanco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mes"
        android:layout_width="92dp"
        android:layout_height="57dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/mes"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        android:textColor="@color/Blanco"
        android:textColorHint="@color/Blanco"
        app:layout_constraintStart_toEndOf="@+id/dia"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/anio"
        android:layout_width="83dp"
        android:layout_height="60dp"
        android:layout_marginTop="236dp"
        android:ems="10"
        android:hint="@string/año"
        android:inputType="number"
        android:maxLength="4"
        android:textAlignment="center"
        android:textColor="@color/Blanco"
        android:textColorHint="@color/Blanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/mes"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/num_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/Cuenta"
        android:maxLength="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/Blanco"
        android:textColorHint="@color/Blanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mes" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:ems="10"
        android:hint="@string/Correo"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/Blanco"
        android:textColorHint="@color/Blanco"
        app:layout_constraintBottom_toTopOf="@+id/ingresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_cuenta"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>