<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/horoscopochino"
    tools:context=".Main2Activity">

    <Button
        android:id="@+id/button"
        android:layout_width="136dp"
        android:layout_height="62dp"
        android:layout_marginBottom="48dp"
        android:onClick="regreso"
        android:text="@string/regreso"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/mensaje"
        android:layout_width="225dp"
        android:layout_height="37dp"
        android:layout_marginTop="232dp"
        android:text="@string/mensaje2"
        android:textAlignment="center"
        android:textColor="@color/Blanco"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="310dp"
        android:layout_height="44dp"
        android:layout_marginTop="60dp"
        android:textAlignment="center"
        android:textColor="@color/Blanco"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mostrar_edad"
        android:layout_width="141dp"
        android:layout_height="30dp"
        android:text="@string/Mostrar_edad"
        android:textColor="@color/Blanco"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/mensaje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name"
        app:layout_constraintVertical_bias="0.577" />

    <TextView
        android:id="@+id/edad"
        android:layout_width="90dp"
        android:layout_height="36dp"
        android:layout_marginTop="160dp"
        android:textAlignment="center"
        android:textColor="@color/Blanco"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toEndOf="@+id/mostrar_edad"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="265dp"
        android:layout_height="277dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mensaje" />

    <TextView
        android:id="@+id/namehoroscopo"
        android:layout_width="93dp"
        android:layout_height="34dp"
        android:layout_marginTop="232dp"
        android:textAlignment="center"
        android:textColor="@color/Blanco"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toEndOf="@+id/mensaje"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>